--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,7 @@
 
 @grey-dark:     #333;
 @grey-md-dark:  #555;
-@grey-md:       #777;
+@grey-md:       #777; 
 @grey-md-light: #ccc;
 @grey-light:    #eee;
 
@@ -183,10 +183,17 @@ table tr td {
     color: @grey-light;    
 }
 
-#svg-surface {
+svg.scales {
     position: relative;
     width: 100%;
     min-height: 400px;
+}
+
+svg.chords {
+    position: relative;
+    width: 600px;
+    height: 500px;
+    background-color: @container-bg;
 }
 
 .learn-more {
