--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,23 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 body {
   line-height: 2em;
-  background: #445966;
   font-family: 'Oxygen', sans-serif;
+  background: #445966;
+  background-image: url("/img/bg.png");
+  /* fallback */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+17,000000+44,000000+62,000000+84&0.78+17,0+44,0+62,0.75+84 */
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.78) 17%, rgba(0, 0, 0, 0) 44%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.75) 84%), url("/img/bg.png");
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.78) 17%, rgba(0, 0, 0, 0) 44%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.75) 84%), url("/img/bg.png");
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.78) 17%, rgba(0, 0, 0, 0) 44%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.75) 84%), url("/img/bg.png");
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c7000000', endColorstr='#bf000000', GradientType=0), url("/img/bg.png");
+  /* IE6-9 */
+  background-attachment: fixed;
 }
 h1 {
   margin: 0 0 6px 0;
@@ -19,9 +30,6 @@ h1 {
 span.subtitle {
   font-size: 1.5em;
   font-weight: 300;
-}
-div {
-  /*border: 1px solid black;*/
 }
 div .div-inline {
   display: table-cell;
@@ -70,13 +78,15 @@ table tr td {
 .container {
   position: relative;
   width: 90%;
-  background: #eee;
   margin: 0 auto;
   top: 0px;
   border-top: 0;
 }
-.container-sm {
-  width: 76%;
+.container .title-header {
+  background: #eee;
+  box-shadow: 4px 4px 20px #000000;
+  -moz-box-shadow: 4px 4px 20px #000000;
+  -webkit-box-shadow: 4px 4px 20px #000000;
 }
 .card {
   border: 1px solid #333;
@@ -105,10 +115,9 @@ table tr td {
   color: #eee;
   background-color: #333;
 }
-.container-dark {
-  border-top: 1px solid #333;
+.container-options {
+  margin-top: 18px;
   color: #eee;
-  background-color: #445966;
 }
 .footer {
   width: 100%;
@@ -122,12 +131,24 @@ table tr td {
   padding: 24px 0;
   color: #eee;
 }
-.surface-container {
-  padding: 18px;
+div.surface-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  margin-bottom: 12px;
+}
+div.surface-container:after {
+  display: block;
+  content: '';
+}
+div.surface-container > div {
+  padding: 12px;
+  background: #eee;
 }
 svg.scales {
-  min-height: 400px;
-  vertical-align: top;
+  min-height: 300px;
+  max-height: 600px;
 }
 svg.chords {
   position: relative;
@@ -163,17 +184,17 @@ svg:not(:root) {
 }
 .zoom-pan-control {
   display: inline-block;
-  padding: 0 12px 12px 12px;
   float: right;
+  margin-right: 12px;
 }
 .zoom-pan-control a {
-  padding: 6px;
   color: #333;
   text-decoration: none;
+  padding: 12px 6px 2px 6px;
 }
-.zoom-pan-control .active {
-  background-color: #555;
-  color: #eee;
+.zoom-pan-control a.active {
+  background-color: #bf5;
+  border: 1px solid #333;
 }
 .learn-more {
   float: right;
@@ -314,9 +335,9 @@ li.instrument-icon.active {
   max-width: 80%;
   line-height: 1.3em;
   color: #333;
+  border-radius: 4px;
   background-color: #eee;
   border: 1px solid #333;
-  border-radius: 4px;
   box-shadow: 2px 2px 4px #333;
   -moz-box-shadow: 2px 2px 4px #333;
   -webkit-box-shadow: 2px 2px 4px #333;
@@ -327,5 +348,49 @@ li.instrument-icon.active {
 .tooltip-show {
   opacity: 1;
 }
+/* New settings panels */
+div.settings-panel {
+  display: inline-block;
+  background-color: #111;
+  min-width: 250px;
+}
+div.settings-panel div.header {
+  background-color: #000;
+  padding: 6px 12px;
+  font-size: 1.3em;
+  border: 3px solid #8fee00;
+}
+div.settings-panel div.header span {
+  font-weight: bold;
+  padding: 2px 12px 2px 0;
+  margin-right: 12px;
+  border-right: 3px solid #8fee00;
+}
+div.settings-panel div.content {
+  border-left: 1px solid #ccc;
+  border-top: 1px solid #111;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+div.settings-panel div.content table {
+  border-spacing: 0 10px;
+}
+div.settings-panel div.content table tr {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6b6b6b+0,545454+20,1c1c1c+93,383838+100 */
+  background: #6b6b6b;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #6b6b6b 0%, #545454 20%, #1c1c1c 93%, #383838 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #6b6b6b 0%, #545454 20%, #1c1c1c 93%, #383838 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #6b6b6b 0%, #545454 20%, #1c1c1c 93%, #383838 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b6b6b', endColorstr='#383838', GradientType=0);
+  /* IE6-9 */
+}
+div.settings-panel div.content table tr td {
+  padding: 4px 12px;
+}
+/******/
 
 /*# sourceMappingURL=style.css.map */
