--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ div .div-inline {
 select,
 input,
 button,
-a.button {
+a.button,
+img.button {
   font-size: 1em;
   height: 1.8em;
   padding: 4px;
@@ -49,7 +50,7 @@ a.button {
   border-radius: 4px;
   border: 1px solid #eee;
   color: #eee;
-  background-color: #445966;
+  background-color: #333;
 }
 select.select-sm {
   min-width: 80px;
@@ -71,6 +72,9 @@ a.button:hover {
   background-color: #bf5;
   border: 1px solid #333;
   color: #333;
+}
+img.button:hover {
+  cursor: pointer;
 }
 table tr td {
   padding-right: 6px;
@@ -363,7 +367,11 @@ div.settings-panel div.header {
 div.settings-panel div.header span {
   font-weight: bold;
   padding: 2px 12px 2px 0;
-  margin-right: 12px;
+}
+div.settings-panel div.header span img {
+  height: 2em;
+  margin-top: 5px;
+  padding-right: 12px;
   border-right: 3px solid #8fee00;
 }
 div.settings-panel div.content {
@@ -390,6 +398,10 @@ div.settings-panel div.content table tr {
 }
 div.settings-panel div.content table tr td {
   padding: 4px 12px;
+}
+img.button {
+  margin: -8.5px 0;
+  height: 1.2em;
 }
 /******/
 
