--- a/css/style.less
+++ b/css/style.less
@@ -21,8 +21,9 @@
 
 @button-bg:     @grey-dark;
 
-@instrument-bg:         @grey-md-dark;
-@instrument-active:     @grey-md;
+
+@tab-menu-inactive: @grey-md;
+@tab-menu-active:   @container-bg;
 
 @footer-bg:     @navy-dark;//@grey-md-light;
 
@@ -61,7 +62,6 @@ span.subtitle {
 div .div-inline {
     display: table-cell;
     vertical-align: top;
-    padding: 16px;
 }
 
 select, input, button, a.button, img.button {
@@ -120,6 +120,9 @@ table tr td { padding-right: 6px; }
     -webkit-box-shadow: 4px 4px 20px darken(@grey-dark, 20%);
 }
 
+.pull-right {
+    float: right;   
+}
 
 .card {
     border: 1px solid @grey-dark;
@@ -248,40 +251,61 @@ svg:not(:root) {
     float: right;
 }
 
-.instrument-menu {
-    display: inline-block; 
-    height: 90px;
-    padding: 0 15px 0 30px;
-    float: right; 
-    
-    background-color: @instrument-bg;
-    box-shadow:         2px 2px 4px @grey-dark;
-    -moz-box-shadow:    2px 2px 4px @grey-dark;
-    -webkit-box-shadow: 2px 2px 4px @grey-dark;
-}
 
-.instrument-menu > ul{
-    float: right;
-    height: 90px;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    background-color: @instrument-bg;
-}
 
-.instrument-menu li {
-    display: inline;
-    height: 90px;
-}
-
-li.instrument-icon img {
+.instrument-icon img {
     width: 90px;
     height: 90px;
 }
 
-li.instrument-icon.active {
-    background-color: @instrument-active; 
-    display: inline-block; 
+.instrument-icon.active {
+}
+
+.tab-menu {
+	display: table-cell;
+	vertical-align: top;
+	position: relative;
+	text-align: center;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+.tab-menu:after {
+	position: absolute;
+	height: 100%;
+	top: 0;
+	right: 0;
+	border-right: 1px solid @grey-dark;
+	z-index: 100;
+	content: "";
+}
+
+.tab-menu li {
+	position: relative;
+	border: 1px solid @grey-dark;
+	border-radius: 10px 0 0 10px;
+	border-right: 0;
+	background: @grey-md-dark;
+	margin: 10px 0; 
+	width: 90px;
+	height: 90px;
+ 	z-index: 0;
+}
+
+.tab-menu li.active {
+	background: @grey-light;
+	z-index: 200;
+}
+
+.tab-menu ~ div.content {
+	display: table-cell;
+	width: 100%;
+	padding: 12px;
+	border-right: 1px solid @grey-dark;
+	border-top: 1px solid @grey-dark;
+	border-bottom: 1px solid @grey-dark;
 }
 
 .brand {
@@ -353,13 +377,14 @@ li.instrument-icon.active {
 
 .modal-dialog > .modal-sm {
     width: 400px;
+    max-width: 90%;
     position: relative;
     margin: 10% auto;
     background: #eee;
     padding: 20px;        
 }
 
-.modal-dialog > .modal-lg {
+.modal-dialog .modal-lg {
     position: fixed;
     margin: 0 auto;
     top: 10%;
@@ -369,6 +394,10 @@ li.instrument-icon.active {
     background: #eee;
     padding: 20px;        
     overflow-y: auto;
+}
+
+.modal-lg h2 {
+    line-height: 0;   
 }
 
 .modal-close {
