Added new guitar/bass graphics
Added 7, 8 string guitars, 5, 6 string basses

--- a/css/style.css
+++ b/css/style.css
@@ -189,14 +189,16 @@ svg:not(:root) {
   overflow: hidden;
 }
 .zoom-pan-control {
-  display: inline-block;
   float: right;
   margin-right: 12px;
 }
 .zoom-pan-control a {
+  display: inline-block;
   color: #333;
   text-decoration: none;
-  padding: 12px 6px 2px 6px;
+  font-size: 1.2em;
+  padding: 3px 6px;
+  margin-bottom: 12px;
 }
 .zoom-pan-control a.active {
   background-color: #bf5;
