--- a/css/style.less
+++ b/css/style.less
@@ -228,15 +228,17 @@ svg:not(:root) {
 }
 
 .zoom-pan-control {
-    display: inline-block;
     float: right;
     margin-right: 12px;
 }
 
 .zoom-pan-control a {
+    display: inline-block;
     color: @grey-dark;
     text-decoration: none;
-    padding: 12px 6px 2px 6px;
+    font-size: 1.2em;
+    padding: 3px 6px;
+    margin-bottom: 12px;
 }
 
 .zoom-pan-control a img {
