--- a/app/components/scales/scales.html
+++ b/app/components/scales/scales.html
@@ -1,76 +1,88 @@
 <div class="title-header">
-<div class="main-text">
-    <span class="scale">{{JSONData.tonics[selectedTonic] + ' ' + JSONData.scales[selectedScale].name}}</span><br/>
-    <span class="notes">{{scaleNotes}}</span>
-</div>
+    <div class="main-text">
+        <span class="scale">{{JSONData.tonics[selectedTonic] + ' ' + JSONData.scales[selectedScale].name}}</span><br/>
+        <span class="notes">{{scaleNotes}}</span>
+    </div>
 
-<div class="surface-container">
-    <div><svg zoom-pan class="scales select-disable" style="border: 1px solid blue" id="svg-surface" preserveAspectRatio="xMidYMin meet"></svg></div>
-</div>
-<div class="zoom-pan-control">
-    <i class="fa fa-arrows-alt" ng-click="svgSurface.resetZoomPan()"></i>
-    <i class="fa fa-search" ng-click="svgSurface.setActiveControl('zoom')" ng-class="{'active': svgSurface.activeControl == 'zoom'}"></i>
-    <i class="fa fa-hand-paper-o" ng-click="svgSurface.setActiveControl('pan')" ng-class="{'active': svgSurface.activeControl == 'pan'}"></i>
-</div>
+    <div class="surface-container">
+        <div><svg zoom-pan class="scales select-disable" style="border: 1px solid blue" id="svg-surface" preserveAspectRatio="xMidYMin meet"></svg></div>
+    </div>
+
+    <div class="zoom-pan-control">
+        <i class="fa fa-arrows-alt" ng-click="svgSurface.resetZoomPan()"></i>
+        <i class="fa fa-search" ng-click="svgSurface.setActiveControl('zoom')" ng-class="{'active': svgSurface.activeControl == 'zoom'}"></i>
+        <i class="fa fa-hand-paper-o" ng-click="svgSurface.setActiveControl('pan')" ng-class="{'active': svgSurface.activeControl == 'pan'}"></i>
+    </div>
 </div>
 
 <div class="container-options">    
-        <div ng-mouseover="tooltip = 'scale'" ng-mouseout="tooltip = null">
+    <div ng-mouseover="tooltip = 'scale'" ng-mouseout="tooltip = null">
         <h1>{{JSONData.scales[selectedScale].name}} Scale</h1>
         <span class="subtitle" ng-repeat="pitch in JSONData.scales[selectedScale].steps">{{pitch + ' '}}</span>
-        </div>        
+    </div>        
 
-<div class="settings-panel div-inline">
-    <div class="header">
-        <span><img src="../img/guitar-128-2.png" alt="Scale"/></span>
-        Instrument
-    </div>
-    <div class="content">
-        <table>
-        <tr>
-            <td>                                
-                <label>Instrument</label>
-            </td>
-            <td>
-                <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
+    <div class="settings-panel div-inline">
+        <div class="header">
+            <span>
+                <img src="/assets/img/guitar-128-2.png" alt="Scale"/>
+            </span>
+            Instrument
+        </div>
+        <div class="content">
+            <table>
+            <tr>
+                <td>                                
+                    <label>Instrument</label>
+                </td>
+                <td>
+                    <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
 
 
-                <!--<select name="input-num-strings" class="select-sm" ng-model="selectedStrings" ng-change="drawing.reload()">
-                    <option class="option-thin" value="{{key}}" ng-repeat="(key, val) in JSONData.tunings[instrument]">{{key}}</option>
-                </select>-->
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for="tuning">Tuning</label>
-            </td>
-            <td>
-                <select name="tuning" class="select-lg" ng-model="selectedTuning" ng-change="drawing.drawScale()">
-                    <option value="{{key}}" ng-repeat="(key, val) in JSONData.tunings[instrument.instrumentType][instrument.selectedStrings]">{{val.name}}</option>                              
-                </select>
+                    <!--<select name="input-num-strings" class="select-sm" ng-model="selectedStrings" ng-change="drawing.reload()">
+                        <option class="option-thin" value="{{key}}" ng-repeat="(key, val) in JSONData.tunings[instrument]">{{key}}</option>
+                    </select>-->
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="tuning">Tuning</label>
+                </td>
+                <td>
+                    <select 
+                        name="tuning" 
+                        class="select-lg" 
+                        ng-model="instrument.selectedTuning[instrument.instrumentType][instrument.selectedStrings[instrument.instrumentType]]" 
+                        ng-change="drawing.drawScale()">
+                            <option 
+                                value="{{key}}" 
+                                ng-show="val.type == instrument.instrumentType && val.strings == instrument.selectedStrings[instrument.instrumentType]"
+                                ng-repeat="(key, val) in JSONData.tunings">
+                                {{val.name}}
+                            </option>
+                    </select>
+                        
+                    <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
                     
-                <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
-                
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <label for="tuning">Handedness</label>
-            </td>
-            <td>
-                <select name="handedness" class="select-lg" ng-model="instrument.handedness" ng-change="drawing.reload()">
-                    <option value="Right">Right-Handed</option>
-                    <option value="Left">Left-Handed</option>
-                </select>
-            </td>
-        </tr>
-    </table>                    
+                </td>
+            </tr>
+             <tr>
+                <td>
+                    <label for="tuning">Handedness</label>
+                </td>
+                <td>
+                    <select name="handedness" class="select-lg" ng-model="instrument.handedness" ng-change="drawing.reload()">
+                        <option value="Right">Right-Handed</option>
+                        <option value="Left">Left-Handed</option>
+                    </select>
+                </td>
+            </tr>
+        </table>                    
+        </div>
     </div>
-</div>
 
 <div class="settings-panel div-inline">
     <div class="header">
-        <span><img src="../img/musicfile-128.png" alt="Scale"/></span>
+        <span><img src="/assets/img/musicfile-128.png" alt="Scale"/></span>
         Scale
     </div>
     <div class="content">
@@ -97,53 +109,55 @@
             </tr>
         </table>
     </div>
+
+    <a class="button" ng-click="action()">Dont Push</a>
 </div>
 
 
 
-
-
-
 <div class="modal-dialog instrument-modal" ng-class="{'modal-show': modal == 'instrument'}">
-            <div class="modal-lg">
-                <a href="" title="Close" class="modal-close" ng-click="modal = null">X</a>
-                <h2>Instrument</h2>
+    <div class="modal-lg">
+        <a href="" title="Close" class="modal-close" ng-click="modal = null">X</a>
+        <h2>Instrument</h2>
+        
+        <ul class="tab-menu">
+            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Guitar'" ng-class="{'active': instrument.instrumentType == 'Guitar'}">
+                <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/>
+            </li>
+            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Bass Guitar'" ng-class="{'active': instrument.instrumentType == 'Bass Guitar'}">
+                <img src="/assets/svg/menu/main_bass_o.svg" viewBox="0 0 100 100" alt="Bass Guitar Scales"/>
+            </li>
+            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Piano'" ng-class="{'active': instrument.instrumentType == 'Piano'}">
+                <img src="/assets/svg/menu/main_piano_o.svg" viewBox="0 0 100 100" alt="Piano Scales"/>
+            </li>
+        </ul>
+        <div class="content">
+            <!--<ul>
+                <li ng-hide="instrument.instrumentType == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
+            </ul>-->
+            <label for="strings" ng-hide="instrument.instrumentType == 'Piano'">Strings</label>
+            <select name="strings" class="select-sm" ng-model="instrument.selectedStrings[instrument.instrumentType]" ng-hide="instrument.instrumentType == 'Piano'">     
+                <option 
+                    value="{{key}}" 
+                    ng-repeat="(key, val) in instrument.selectedTuning[instrument.instrumentType]">
+                    
+                    {{key}}
+                </option>                           
+            </select>
+
+            <div class="instrument"
+                 ng-repeat="i in instrument.arr track by $index" 
+                 ng-show  ="i.type == instrument.instrumentType && (i.strings == instrument.selectedStrings[instrument.instrumentType] || i.strings == 0)" 
+                 ng-click ="setInstrument($index)">
                 
-                <ul class="tab-menu">
-                    <li class="instrument-icon" ng-click="instrument.instrumentType = 'Guitar'" ng-class="{'active': instrument.instrumentType == 'Guitar'}">
-                        <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/>
-                    </li>
-                    <li class="instrument-icon" ng-click="instrument.instrumentType = 'Bass Guitar'" ng-class="{'active': instrument.instrumentType == 'Bass Guitar'}">
-                        <img src="/assets/svg/menu/main_bass_o.svg" viewBox="0 0 100 100" alt="Bass Guitar Scales"/>
-                    </li>
-                    <li class="instrument-icon" ng-click="instrument.instrumentType = 'Piano'" ng-class="{'active': instrument.instrumentType == 'Piano'}">
-                        <img src="/assets/svg/menu/main_piano_o.svg" viewBox="0 0 100 100" alt="Piano Scales"/>
-                    </li>
-                </ul>
-                <div class="content">
-                    <!--<ul>
-                        <li ng-hide="instrument.instrumentType == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
-                    </ul>-->
-                    <label for="strings" ng-hide="instrument.instrumentType == 'Piano'">Strings</label>
-                    <select name="strings" class="select-sm" ng-model="instrument.selectedStrings[instrument.instrumentType]" ng-hide="instrument.instrumentType == 'Piano'">     
-                        <option value="{{key}}" ng-repeat="(key, val) in JSONData.tunings[instrument.instrumentType]">{{key}}</option>                           
-                    </select>
-
-                    <div class="instrument"
-                         ng-repeat="i in instrument.arr track by $index" 
-                         ng-show  ="i.type == instrument.instrumentType && (i.strings == instrument.selectedStrings[instrument.instrumentType] || i.strings == 0)" 
-                         ng-click ="setInstrument($index)">
-                        
-                        {{$index}} - {{i.name}}<br/>
-                        <img src="{{i.thumb.path}}" viewBox="i.thumb.viewbox" ng-class="{'selected': $index == instrument.index }"/>
-                    </div>
-
-
-                </div>
-
-                <div class="buttons">
-                    <button>Save</button>
-                    <button>Cancel</button>
-                </div>
+                {{$index}} - {{i.name}}<br/>
+                <img src="{{i.thumb.path}}" viewBox="i.thumb.viewbox" ng-class="{'selected': $index == instrument.index }"/>
             </div>
         </div>
+
+        <div class="buttons">
+            <button>Save</button>
+            <button>Cancel</button>
+        </div>
+    </div>
+</div>
