--- a/app/components/scales/scales.html
+++ b/app/components/scales/scales.html
@@ -1,7 +1,7 @@
 <div class="title-header">
     <div class="main-text">
-        <span class="scale">{{JSONData.tonics[selectedTonic] + ' ' + JSONData.scales[selectedScale].name}}</span><br/>
-        <span class="notes">{{scaleNotes}}</span>
+        <span class="scale">{{Scales.JSONData.tonics[Scales.selection.tonic] + ' ' + Scales.JSONData.scales[Scales.selection.scale].name}}</span><br/>
+        <span class="notes">{{Scales.scaleNotes}}</span>
     </div>
 
     <div class="surface-container">
@@ -9,16 +9,16 @@
     </div>
 
     <div class="zoom-pan-control">
-        <i class="fa fa-arrows-alt" ng-click="svgSurface.resetZoomPan()"></i>
-        <i class="fa fa-search" ng-click="svgSurface.setActiveControl('zoom')" ng-class="{'active': svgSurface.activeControl == 'zoom'}"></i>
-        <i class="fa fa-hand-paper-o" ng-click="svgSurface.setActiveControl('pan')" ng-class="{'active': svgSurface.activeControl == 'pan'}"></i>
+        <i class="fa fa-arrows-alt" ng-click="Scales.svgSurface.resetZoomPan()"></i>
+        <i class="fa fa-search" ng-click="Scales.svgSurface.setActiveControl('zoom')" ng-class="{'active': svgSurface.activeControl == 'zoom'}"></i>
+        <i class="fa fa-hand-paper-o" ng-click="Scales.svgSurface.setActiveControl('pan')" ng-class="{'active': svgSurface.activeControl == 'pan'}"></i>
     </div>
 </div>
 
 <div class="container-options">    
-    <div ng-mouseover="tooltip = 'scale'" ng-mouseout="tooltip = null">
-        <h1>{{JSONData.scales[selectedScale].name}} Scale</h1>
-        <span class="subtitle" ng-repeat="pitch in JSONData.scales[selectedScale].steps">{{pitch + ' '}}</span>
+    <div ng-mouseover="Scales.tooltip = 'scale'" ng-mouseout="Scales.tooltip = null">
+        <h1>{{Scales.JSONData.scales[Scales.selection.scale].name}} Scale</h1>
+        <span class="subtitle" ng-repeat="pitch in Scales.JSONData.scales[Scales.selection.scale].steps">{{pitch + ' '}}</span>
     </div>        
 
     <div class="settings-panel div-inline">
@@ -35,11 +35,11 @@
                     <label>Instrument</label>
                 </td>
                 <td>
-                    <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
+                    <i class="fa fa-gear button pull-right" ng-click="Scales.modal = 'instrument'"></i>
 
 
                     <!--<select name="input-num-strings" class="select-sm" ng-model="selectedStrings" ng-change="drawing.reload()">
-                        <option class="option-thin" value="{{key}}" ng-repeat="(key, val) in JSONData.tunings[instrument]">{{key}}</option>
+                        <option class="option-thin" value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tunings[instrument]">{{key}}</option>
                     </select>-->
                 </td>
             </tr>
@@ -51,17 +51,17 @@
                     <select 
                         name="tuning" 
                         class="select-lg" 
-                        ng-model="instrument.selectedTuning[instrument.instrumentType][instrument.selectedStrings[instrument.instrumentType]]" 
-                        ng-change="drawing.drawScale()">
+                        ng-model="Scales.instrument.selectedTuning[Scales.instrument.instrumentType][Scales.instrument.selectedStrings[Scales.instrument.instrumentType]]" 
+                        ng-change="Scales.drawing.drawScale()">
                             <option 
                                 value="{{key}}" 
-                                ng-show="val.type == instrument.instrumentType && val.strings == instrument.selectedStrings[instrument.instrumentType]"
-                                ng-repeat="(key, val) in JSONData.tunings">
+                                ng-show="val.type == Scales.instrument.instrumentType && val.strings == Scales.instrument.selectedStrings[Scales.instrument.instrumentType]"
+                                ng-repeat="(key, val) in Scales.JSONData.tunings">
                                 {{val.name}}
                             </option>
                     </select>
                         
-                    <i class="fa fa-gear button pull-right" ng-click="modal = 'instrument'"></i>
+                    <i class="fa fa-gear button pull-right" ng-click="Scales.modal = 'instrument'"></i>
                     
                 </td>
             </tr>
@@ -70,7 +70,7 @@
                     <label for="tuning">Handedness</label>
                 </td>
                 <td>
-                    <select name="handedness" class="select-lg" ng-model="instrument.handedness" ng-change="drawing.reload()">
+                    <select name="handedness" class="select-lg" ng-model="Scales.instrument.handedness" ng-change="Scales.drawing.reload()">
                         <option value="Right">Right-Handed</option>
                         <option value="Left">Left-Handed</option>
                     </select>
@@ -92,8 +92,8 @@
                     <label for="tonic">Tonic</label>
                 </td>
                 <td>
-                    <select name="tonic" class="select-sm" ng-model="selectedTonic" ng-change="drawing.drawScale()">
-                        <option value="{{key}}" ng-repeat="(key, val) in JSONData.tonics">{{val}}</option>  
+                    <select name="tonic" class="select-sm" ng-model="Scales.selection.tonic" ng-change="Scales.drawing.drawScale()">
+                        <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tonics">{{val}}</option>  
                     </select>
                 </td>
             </tr>
@@ -102,32 +102,32 @@
                     <label for="scale">Scale</label>
                 </td>
                 <td>
-                    <select name="scale" class="select-lg" ng-model="selectedScale" ng-change="drawing.drawScale()">     
-                        <option value="{{key}}" ng-repeat="(key, val) in JSONData.scales">{{val.name}}</option>                           
+                    <select name="scale" class="select-lg" ng-model="Scales.selection.scale" ng-change="Scales.drawing.drawScale()">     
+                        <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.scales">{{val.name}}</option>                           
                     </select>
                 </td>
             </tr>
         </table>
     </div>
 
-    <a class="button" ng-click="action()">Dont Push</a>
+    <a class="button" ng-click="Scales.action()">Dont Push</a>
 </div>
 
 
 
-<div class="modal-dialog instrument-modal" ng-class="{'modal-show': modal == 'instrument'}">
+<div class="modal-dialog instrument-modal" ng-class="{'modal-show': Scales.modal == 'instrument'}">
     <div class="modal-lg">
-        <a href="" title="Close" class="modal-close" ng-click="modal = null">X</a>
+        <a href="" title="Close" class="modal-close" ng-click="Scales.modal = null">X</a>
         <h2>Instrument</h2>
         
         <ul class="tab-menu">
-            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Guitar'" ng-class="{'active': instrument.instrumentType == 'Guitar'}">
-                <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/>
+            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Guitar'" ng-class="{'active': Scales.instrument.instrumentType == 'Guitar'}">
+                <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/> 
             </li>
-            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Bass Guitar'" ng-class="{'active': instrument.instrumentType == 'Bass Guitar'}">
+            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Bass Guitar'" ng-class="{'active': Scales.instrument.instrumentType == 'Bass Guitar'}">
                 <img src="/assets/svg/menu/main_bass_o.svg" viewBox="0 0 100 100" alt="Bass Guitar Scales"/>
             </li>
-            <li class="instrument-icon" ng-click="instrument.instrumentType = 'Piano'" ng-class="{'active': instrument.instrumentType == 'Piano'}">
+            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Piano'" ng-class="{'active': Scales.instrument.instrumentType == 'Piano'}">
                 <img src="/assets/svg/menu/main_piano_o.svg" viewBox="0 0 100 100" alt="Piano Scales"/>
             </li>
         </ul>
@@ -135,23 +135,23 @@
             <!--<ul>
                 <li ng-hide="instrument.instrumentType == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
             </ul>-->
-            <label for="strings" ng-hide="instrument.instrumentType == 'Piano'">Strings</label>
-            <select name="strings" class="select-sm" ng-model="instrument.selectedStrings[instrument.instrumentType]" ng-hide="instrument.instrumentType == 'Piano'">     
+            <label for="strings" ng-hide="Scales.instrument.instrumentType == 'Piano'">Strings</label>
+            <select name="strings" class="select-sm" ng-model="Scales.instrument.selectedStrings[Scales.instrument.instrumentType]" ng-hide="Scales.instrument.instrumentType == 'Piano'">     
                 <option 
                     value="{{key}}" 
-                    ng-repeat="(key, val) in instrument.selectedTuning[instrument.instrumentType]">
+                    ng-repeat="(key, val) in Scales.instrument.selectedTuning[Scales.instrument.instrumentType]">
                     
                     {{key}}
                 </option>                           
             </select>
 
             <div class="instrument"
-                 ng-repeat="i in instrument.arr track by $index" 
-                 ng-show  ="i.type == instrument.instrumentType && (i.strings == instrument.selectedStrings[instrument.instrumentType] || i.strings == 0)" 
-                 ng-click ="setInstrument($index)">
+                 ng-repeat="i in Scales.instrument.arr track by $index" 
+                 ng-show  ="i.type == Scales.instrument.instrumentType && (i.strings == Scales.instrument.selectedStrings[Scales.instrument.instrumentType] || i.strings == 0)" 
+                 ng-click ="Scales.setInstrument($index)">
                 
                 {{$index}} - {{i.name}}<br/>
-                <img src="{{i.thumb.path}}" viewBox="i.thumb.viewbox" ng-class="{'selected': $index == instrument.index }"/>
+                <img src="{{i.thumb.path}}" viewBox="i.thumb.viewbox" ng-class="{'selected': $index == Scales.instrument.index }"/>
             </div>
         </div>
 
