--- a/app/components/scales/scales.html
+++ b/app/components/scales/scales.html
@@ -27,55 +27,51 @@
                 <img src="/assets/img/guitar-128-2.png" alt="Scale"/>
             </span>
             Instrument
+            <button ng-click="Scales.modal = 'instrument'">Edit <i class="fa fa-gear"></i></button>
         </div>
         <div class="content">
+
             <table>
-            <tr>
-                <td>                                
-                    <label>Instrument</label>
-                </td>
-                <td>
-                    <i class="fa fa-gear button pull-right" ng-click="Scales.modal = 'instrument'"></i>
+                <tr>
+                    <td>
+                        {{Scales.instrument.type}}
+                    </td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">
+                         <img class="instrument-icon" 
+                             ng-class="{'left-handed': Scales.instrument.handedness == 'Left'}" 
+                             src="{{Scales.instrument.arr[Scales.instrument.index].instPanel.path}}" 
+                             viewBox="{{Scales.instrument.arr[Scales.instrument.index].instPanel.viewBox}}"
+                        />
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="width: 100px;">
+                        Strings
+                    </td>
+                    <td>
+                        {{Scales.instrument.arr[Scales.instrument.index].strings}}
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="width: 100px;">
+                        Tuning
+                    </td>
+                    <td>
+                        {{Scales.JSONData.tunings[Scales.instrument.getCurrentTuning()].name}} {{Scales.getCurrentTuningNotes()}}
+                    </td>
+                </tr>
+            </table>
 
 
-                    <!--<select name="input-num-strings" class="select-sm" ng-model="selectedStrings" ng-change="drawing.reload()">
-                        <option class="option-thin" value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tunings[instrument]">{{key}}</option>
-                    </select>-->
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label for="tuning">Tuning</label>
-                </td>
-                <td>
-                    <select 
-                        name="tuning" 
-                        class="select-lg" 
-                        ng-model="Scales.instrument.selectedTuning[Scales.instrument.instrumentType][Scales.instrument.selectedStrings[Scales.instrument.instrumentType]]" 
-                        ng-change="Scales.drawing.drawScale()">
-                            <option 
-                                value="{{key}}" 
-                                ng-show="val.type == Scales.instrument.instrumentType && val.strings == Scales.instrument.selectedStrings[Scales.instrument.instrumentType]"
-                                ng-repeat="(key, val) in Scales.JSONData.tunings">
-                                {{val.name}}
-                            </option>
-                    </select>
-                        
-                    <i class="fa fa-gear button pull-right" ng-click="Scales.modal = 'instrument'"></i>
-                    
-                </td>
-            </tr>
-             <tr>
-                <td>
-                    <label for="tuning">Handedness</label>
-                </td>
-                <td>
-                    <select name="handedness" class="select-lg" ng-model="Scales.instrument.handedness" ng-change="Scales.drawing.reload()">
-                        <option value="Right">Right-Handed</option>
-                        <option value="Left">Left-Handed</option>
-                    </select>
-                </td>
-            </tr>
+
+           
+              
         </table>                    
         </div>
     </div>
@@ -121,39 +117,67 @@
         <h2>Instrument</h2>
         
         <ul class="tab-menu">
-            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Guitar'" ng-class="{'active': Scales.instrument.instrumentType == 'Guitar'}">
+            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Guitar'" ng-class="{'active': Scales.instrument.type == 'Guitar'}">
                 <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/> 
             </li>
-            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Bass Guitar'" ng-class="{'active': Scales.instrument.instrumentType == 'Bass Guitar'}">
+            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Bass Guitar'" ng-class="{'active': Scales.instrument.type == 'Bass Guitar'}">
                 <img src="/assets/svg/menu/main_bass_o.svg" viewBox="0 0 100 100" alt="Bass Guitar Scales"/>
             </li>
-            <li class="instrument-icon" ng-click="Scales.instrument.instrumentType = 'Piano'" ng-class="{'active': Scales.instrument.instrumentType == 'Piano'}">
+            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Piano'" ng-class="{'active': Scales.instrument.type == 'Piano'}">
                 <img src="/assets/svg/menu/main_piano_o.svg" viewBox="0 0 100 100" alt="Piano Scales"/>
             </li>
         </ul>
         <div class="content">
             <!--<ul>
-                <li ng-hide="instrument.instrumentType == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
+                <li ng-hide="instrument.type == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
             </ul>-->
-            <label for="strings" ng-hide="Scales.instrument.instrumentType == 'Piano'">Strings</label>
-            <select name="strings" class="select-sm" ng-model="Scales.instrument.selectedStrings[Scales.instrument.instrumentType]" ng-hide="Scales.instrument.instrumentType == 'Piano'">     
-                <option 
-                    value="{{key}}" 
-                    ng-repeat="(key, val) in Scales.instrument.selectedTuning[Scales.instrument.instrumentType]">
-                    
-                    {{key}}
-                </option>                           
-            </select>
+
+
+            <div class="string-selection">
+                <ul>
+                    <li 
+                        ng-repeat="(key, val) in Scales.instrument.selectedTuning[Scales.instrument.type]"
+                        ng-click="Scales.instrument.setStrings(key)"
+                        ng-class="{'active': Scales.instrument.selectedStrings[Scales.instrument.type] == key}">
+                            {{key}}
+                    </li>
+                </ul>
+            </div>
+
+
+
+
 
             <div class="instrument"
                  ng-repeat="i in Scales.instrument.arr track by $index" 
-                 ng-show  ="i.type == Scales.instrument.instrumentType && (i.strings == Scales.instrument.selectedStrings[Scales.instrument.instrumentType] || i.strings == 0)" 
+                 ng-show  ="i.type == Scales.instrument.type && (i.strings == Scales.instrument.selectedStrings[Scales.instrument.type] || i.strings == 0)" 
                  ng-click ="Scales.setInstrument($index)">
                 
                 {{$index}} - {{i.name}}<br/>
-                <img src="{{i.thumb.path}}" viewBox="i.thumb.viewbox" ng-class="{'selected': $index == Scales.instrument.index }"/>
+                <img src="{{i.instSelect.path}}" viewBox="i.instSelect.viewbox" ng-class="{'selected': $index == Scales.instrument.index, 'left-handed': Scales.instrument.handedness == 'Left' }"/>
             </div>
         </div>
+
+
+        <label for="tuning">Tuning</label>
+        <select 
+            name="tuning" 
+            class="select-lg" 
+            ng-model="Scales.instrument.selectedTuning[Scales.instrument.type][Scales.instrument.selectedStrings[Scales.instrument.type]]" 
+            ng-change="Scales.drawing.drawScale()">
+                <option 
+                    value="{{key}}" 
+                    ng-show="val.type == Scales.instrument.type && val.strings == Scales.instrument.selectedStrings[Scales.instrument.type]"
+                    ng-repeat="(key, val) in Scales.JSONData.tunings">
+                    {{val.name}}
+                </option>
+        </select>
+
+        <label for="tuning">Handedness</label>
+        <select name="handedness" class="select-lg" ng-model="Scales.instrument.handedness" ng-change="Scales.drawing.reload()">
+            <option value="Right">Right-Handed</option>
+            <option value="Left">Left-Handed</option>
+        </select>
 
         <div class="buttons">
             <button>Save</button>
