--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -106,7 +106,7 @@ table tr td { padding-right: 6px; }
 
 .container {
     position: relative;
-    width: 90%;
+    width: 96%;
     margin: 0 auto;
     top: 0px;
 
@@ -232,7 +232,7 @@ svg:not(:root) {
     margin-right: 12px;
 }
 
-.zoom-pan-control a {
+.zoom-pan-control i {
     display: inline-block;
     color: @grey-dark;
     text-decoration: none;
@@ -241,10 +241,7 @@ svg:not(:root) {
     margin-bottom: 12px;
 }
 
-.zoom-pan-control a img {
-}
-
-.zoom-pan-control a.active {
+.zoom-pan-control i.active {
     background-color: @lime;  
     border: 1px solid @grey-dark;
 }
@@ -252,8 +249,6 @@ svg:not(:root) {
 .learn-more {
     float: right;
 }
-
-
 
 .instrument-icon img {
     width: 90px;
