--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ table tr td {
 }
 .container {
   position: relative;
-  width: 90%;
+  width: 96%;
   margin: 0 auto;
   top: 0px;
   border-top: 0;
@@ -192,7 +192,7 @@ svg:not(:root) {
   float: right;
   margin-right: 12px;
 }
-.zoom-pan-control a {
+.zoom-pan-control i {
   display: inline-block;
   color: #333;
   text-decoration: none;
@@ -200,7 +200,7 @@ svg:not(:root) {
   padding: 3px 6px;
   margin-bottom: 12px;
 }
-.zoom-pan-control a.active {
+.zoom-pan-control i.active {
   background-color: #bf5;
   border: 1px solid #333;
 }
