--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,6 @@ button,
 a.button,
 img.button {
   font-size: 1em;
-  height: 1.8em;
   padding: 4px;
   margin: 5px 2px;
   -webkit-border-radius: 4px;
@@ -283,11 +282,44 @@ svg:not(:root) {
 }
 .tab-menu ~ div.content {
   display: table-cell;
+  background: #eee;
+  color: #333;
   width: 100%;
   padding: 12px;
   border-right: 1px solid #333;
   border-top: 1px solid #333;
   border-bottom: 1px solid #333;
+  -webkit-border-radius: 14px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius: 14px;
+  -moz-border-radius-topleft: 0;
+  border-radius: 14px;
+  border-top-left-radius: 0;
+}
+div.string-selection {
+  float: left;
+}
+div.instrument-modal .instrument {
+  display: inline-block;
+  width: 175px;
+  /* IE needs width to be set */
+  margin: 0 12px;
+}
+div.instrument-modal .instrument img {
+  display: block;
+  margin: 0 auto;
+  padding: 12px;
+  height: 400px;
+}
+div.instrument-modal .instrument.selected {
+  background: #ccc;
+}
+div.instrument-modal .string-selection {
+  margin-right: 24px;
+}
+div.instrument-modal .guitar-settings {
+  margin-top: 12px;
+  margin-left: 100px;
 }
 .brand {
   display: inline-block;
@@ -346,33 +378,54 @@ svg:not(:root) {
   pointer-events: auto;
 }
 .modal-dialog > .modal-sm {
+  position: relative;
   width: 400px;
   max-width: 90%;
-  position: relative;
   margin: 10% auto;
   background: #eee;
   padding: 20px;
 }
 .modal-dialog .modal-lg {
-  position: fixed;
-  margin: 0 auto;
-  top: 10%;
-  bottom: 10%;
-  left: 10%;
-  right: 10%;
+  position: relative;
+  margin: 2% auto;
+  width: 1000px;
   background: #eee;
   padding: 20px;
   overflow-y: auto;
+  background: #333;
+  -webkit-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  border-radius: 14px;
 }
 .modal-lg h2 {
+  margin: 0;
+  margin-top: 12px;
+  margin-bottom: 24px;
   line-height: 0;
+  font-weight: normal;
 }
 .modal-close {
-  background: #333;
-  color: #FFFFFF;
-  padding: 0 7px;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  text-align: center;
+  line-height: 24px;
+  height: 28px;
+  width: 28px;
+  font-size: 24px;
   text-decoration: none;
+  background: #fff;
+  color: #333;
   font-weight: bold;
+  -webkit-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.75);
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  border-radius: 14px;
 }
 .modal-close:hover {
   background-color: #bf5;
@@ -382,13 +435,6 @@ svg:not(:root) {
   position: absolute;
   right: 16px;
   top: 16px;
-}
-.modal-lg > .modal-close {
-  position: fixed;
-  margin-top: 20px;
-  margin-right: 30px;
-  right: 10%;
-  top: 10%;
 }
 .tooltip {
   position: absolute;
@@ -421,7 +467,7 @@ div.settings-panel {
 div.settings-panel div.header {
   background-color: #000;
   padding: 6px 12px;
-  font-size: 1.3em;
+  font-size: 1.6em;
   border: 3px solid #8fee00;
 }
 div.settings-panel div.header span {
@@ -429,10 +475,16 @@ div.settings-panel div.header span {
   padding: 2px 12px 2px 0;
 }
 div.settings-panel div.header span img {
-  height: 2em;
+  height: 1.5em;
   margin-top: 5px;
   padding-right: 12px;
   border-right: 3px solid #8fee00;
+}
+div.settings-panel div.header i.edit {
+  margin-left: 16px;
+}
+div.settings-panel div.header i.edit:hover {
+  cursor: pointer;
 }
 div.settings-panel div.content {
   border-left: 1px solid #ccc;
@@ -458,16 +510,6 @@ div.settings-panel div.content table tr {
 }
 div.settings-panel div.content table tr td {
   padding: 4px 12px;
-}
-div.instrument-modal .instrument {
-  display: inline-block;
-}
-div.instrument-modal .instrument img {
-  padding: 12px;
-  max-height: 400px;
-}
-div.instrument-modal .instrument img.selected {
-  background: #ccc;
 }
 img.button {
   margin: -8.5px 0;
